--- a/package.json
+++ b/package.json
@@ -12,9 +12,6 @@
   },
   "dependencies": {
     "apollo-server": "2.14.5",
-    "cheerio": "^1.0.0-rc.2",
-    "graphql": "^14.0.2",
-    "node-fetch": "^2.2.0",
-    "tslib": "https://github.com/yhattm/tslib.git"
+    "yhattmtslib": "https://github.com/yhattm/yhattmtslib.git"
   }
 }
